test/fail/unterminated-string.rnp
'hello---
 --> fail/unterminated-string.rnp:1:7
  |
1 | 'hello
  |       ^ Unterminated string
  |
